Controller test - part 2 & code clean up